Change login button color

--- a/login.html
+++ b/login.html
@@ -16,9 +16,9 @@
 			<img src="img/logo_text.png" />
         </div>
         <div class="login-input">
-            <input type="text" placeholder="전화번호, 사용자 이름 또는 이메일">
-            <input type="password" placeholder="비밀번호">
-            <button>로그인</button>
+            <input class="id" type="text" placeholder="전화번호, 사용자 이름 또는 이메일">
+            <input class="pw" type="password" placeholder="비밀번호">
+            <button id="login-btn">로그인</button>
         </div>
         <div class="forgot">
             <p>비밀번호를 잊으셨나요?<p>
