--- a/main.html
+++ b/main.html
@@ -11,8 +11,8 @@
     <nav>
         <div class="content">
             <div class="one">
-                <img class="img-logo" src="https://s3.ap-northeast-2.amazonaws.com/cdn.wecode.co.kr/bearu/logo.png">
-                <img class="text-logo" src="img/logo_text.png">
+                <img class="content-img-logo" src="https://s3.ap-northeast-2.amazonaws.com/cdn.wecode.co.kr/bearu/logo.png">
+                <img class="content-text-logo" src="img/logo_text.png">
             </div>
             <input class="search" type="text" placeholder="검색">
             <div class="three">
@@ -63,12 +63,45 @@
                     <input type="text" placeholder="댓글 달기...">
                     <button>게시</button>
                 </div>
-
             </article>
         </div>
         
         <div class="main-right">
-            
+            <div class="mine">
+                <img src="https://pbs.twimg.com/profile_images/1109389733912666112/XX55fTPf.jpg"/>
+                <div class="mine-container">
+                    <p class="mine-name">wecode_bootcamp</p>
+                    <p class="mine-kor-name">WeCode | 위코드</p>
+                </div>
+            </div>
+
+            <div class="story-container">
+                <div class="story-title">
+                    <p class="title-story">스토리</p>
+                    <p class="title-see-all">모두보기</p>
+                </div>
+                <div class="friend">
+                    <img src="https://i.pinimg.com/originals/f1/6c/ea/f16ceafdbb590986dd6dc63e8c87cc67.jpg">
+                    <div class="friend-info">
+                        <p class="friend-name">Welsh Corgi</p>
+                        <p class="friend-last-login">10분 전</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="recommend-container">
+                <div class="recommend-title">
+                    <p class="recommend-story">회원님을 위한 추천</p>
+                    <p class="recommend-see-all">모두보기</p>
+                </div>
+                <div class="recommend">
+                    <img src="https://www.abc.net.au/news/image/10477576-3x2-940x627.jpg">
+                    <div class="recommend-info">
+                        <p class="recommend-name">abcde</p>
+                        <p class="recommend-follow">wecode님이 팔로우합니다</p>
+                    </div>
+                </div>
+            </div>
         </div>
 
     </div>
