--- a/main.html
+++ b/main.html
@@ -14,11 +14,14 @@
                 <img class="content-img-logo" src="https://s3.ap-northeast-2.amazonaws.com/cdn.wecode.co.kr/bearu/logo.png">
                 <img class="content-text-logo" src="img/logo_text.png">
             </div>
-            <input class="search" type="text" placeholder="검색">
+            <div class="two">
+                <span ><img class="search-icon" src="https://webstockreview.net/images/search-icon-png-9.png"/></span>
+                <input class="search" type="text" placeholder="검색">
+            </div>
             <div class="three">
-                <img src="https://s3.ap-northeast-2.amazonaws.com/cdn.wecode.co.kr/bearu/explore.png">
-                <img src="https://s3.ap-northeast-2.amazonaws.com/cdn.wecode.co.kr/bearu/heart.png">
-                <img src="https://s3.ap-northeast-2.amazonaws.com/cdn.wecode.co.kr/bearu/profile.png">
+                <span><img src="https://s3.ap-northeast-2.amazonaws.com/cdn.wecode.co.kr/bearu/explore.png"></span>
+                <span><img src="https://s3.ap-northeast-2.amazonaws.com/cdn.wecode.co.kr/bearu/heart.png"></span>
+                <span><img src="https://s3.ap-northeast-2.amazonaws.com/cdn.wecode.co.kr/bearu/profile.png"></span>
             </div>
         </div>
     </nav>
@@ -39,12 +42,12 @@
                         <img src="https://s3.ap-northeast-2.amazonaws.com/cdn.wecode.co.kr/bearu/more.png">
                     </div>
                 </header>
-                <img class="main-img" src="https://ojsfile.ohmynews.com/STD_IMG_FILE/2016/0516/IE001963941_STD.jpg">
+                <img class="main-img" src="https://lh3.googleusercontent.com/proxy/4jhcyarAiDHvkYuxM9CXBTHGZulUNEEEzjn5-BltaO3rc2Tvb8mRWG7jOF-Czmnqoz7NLzK2kmFtOx8UMYg_7AFk6zUuCpd8P68pi63MRvfrs0KK5hS6CTYhF8xy2Ww">
                 <div class="emotion">
                     <div class="emo-left">
-                        <img src="https://s3.ap-northeast-2.amazonaws.com/cdn.wecode.co.kr/bearu/heart.png" />
-                        <img src="https://s3.ap-northeast-2.amazonaws.com/cdn.wecode.co.kr/bearu/comment.png" />
-                        <img src="https://s3.ap-northeast-2.amazonaws.com/cdn.wecode.co.kr/bearu/share.png" />
+                        <span class="emo-left-heart"><img src="https://s3.ap-northeast-2.amazonaws.com/cdn.wecode.co.kr/bearu/heart.png" /></span>
+                        <span class="emo-left-comment"><img src="https://s3.ap-northeast-2.amazonaws.com/cdn.wecode.co.kr/bearu/comment.png" /></span>
+                        <span class="emo-left-share"><img src="https://s3.ap-northeast-2.amazonaws.com/cdn.wecode.co.kr/bearu/share.png" /></span>
                     </div>
                     <div class="emo-right">
                         <img src="https://s3.ap-northeast-2.amazonaws.com/cdn.wecode.co.kr/bearu/bookmark.png" />
@@ -55,8 +58,8 @@
                     <span class="name">wecode_bootcamp</span> 님 외 n명이 좋아합니다.
                 </div>
                 <div class="comment-box">
-                    <p><span>canon_mj</span>위워크에서 어쩌구 저쩌구</p>
-                    <p><span>neceosecius</span>빨리 끝내고 싶다ㅏ</p>
+                    <p><a>canon_mj</a><span>위워크에서 어쩌구 저쩌구</span></p>
+                    <p><a>neceosecius</a><span>빨리 끝내고 싶다ㅏ</span></p>
                 </div>
                 <p class="comment-time">42분 전</p>
                 <div class="new-comment">
@@ -100,8 +103,11 @@
                         <p class="recommend-name">abcde</p>
                         <p class="recommend-follow">wecode님이 팔로우합니다</p>
                     </div>
-                    <button>팔로우</button>
+                    <div> 
+                        <button class="recommend-button">팔로우</button>
+                    </div>
                 </div>
+                
             </div>
         </div>
 
