--- a/main.html
+++ b/main.html
@@ -100,6 +100,7 @@
                         <p class="recommend-name">abcde</p>
                         <p class="recommend-follow">wecode님이 팔로우합니다</p>
                     </div>
+                    <button>팔로우</button>
                 </div>
             </div>
         </div>
