Add write comment JS, exist some errors..

--- a/main.html
+++ b/main.html
@@ -55,10 +55,10 @@
                     <span class="name">wecode_bootcamp</span> 님 외 n명이 좋아합니다.
                 </div>
                 <div class="comment-box">
-                    <p><span style="font-weight: bold;">canon_mj</span> 위워크에서 어쩌구 저쩌구</p>
-                    <p><span style="font-weight: bold;">neceosecius</span> 빨리 끝내고 싶다ㅏ</p>
-                    <p class="comment-time">42분 전</p>
+                    <p><span>canon_mj</span>위워크에서 어쩌구 저쩌구</p>
+                    <p><span>neceosecius</span>빨리 끝내고 싶다ㅏ</p>
                 </div>
+                <p class="comment-time">42분 전</p>
                 <div class="new-comment">
                     <input type="text" placeholder="댓글 달기...">
                     <button>게시</button>
