--- a/main.html
+++ b/main.html
@@ -42,7 +42,7 @@
                         <img src="https://s3.ap-northeast-2.amazonaws.com/cdn.wecode.co.kr/bearu/more.png">
                     </div>
                 </header>
-                <img class="main-img" src="https://lh3.googleusercontent.com/proxy/4jhcyarAiDHvkYuxM9CXBTHGZulUNEEEzjn5-BltaO3rc2Tvb8mRWG7jOF-Czmnqoz7NLzK2kmFtOx8UMYg_7AFk6zUuCpd8P68pi63MRvfrs0KK5hS6CTYhF8xy2Ww">
+                <img class="main-img" src="https://lh3.googleusercontent.com/proxy/TN7zzYgXw-vfJ9qCjqojBgt_pQQkWfUJDRNEV_ib74H9Y2YM7geE2_XXzpsjvcQnCShy67ksW5k9dEciZEFLcNsetB2xPPM240Kq_MjvxhMB6KNomzQo4ja6nb4CXGDhVA">
                 <div class="emotion">
                     <div class="emo-left">
                         <span class="emo-left-heart"><img src="https://s3.ap-northeast-2.amazonaws.com/cdn.wecode.co.kr/bearu/heart.png" /></span>
@@ -101,14 +101,23 @@
                     <img src="https://www.abc.net.au/news/image/10477576-3x2-940x627.jpg">
                     <div class="recommend-info">
                         <p class="recommend-name">abcde</p>
-                        <p class="recommend-follow">wecode님이 팔로우합니다</p>
+                        <p class="recommend-follow">ab_님이 팔로우합니다</p>
                     </div>
                     <div> 
                         <button class="recommend-button">팔로우</button>
                     </div>
                 </div>
-                
             </div>
+
+            <div class="other">
+                <p class="text">소개·도움말·홍보 센터·API·채용정보·</p>
+                <p class="text">개인정보처리방침·약관·위치·인기 계정·해시태그</p>
+                <p class="text">언어</p>
+                <br>
+                <p>© 2020 WESTAGRAM FROM WECODE</p>
+
+            </div>
+
         </div>
 
     </div>
